docs: Update launcher README.md